service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: LoadBalancer
