ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: example.com # replace with your own domain or IP address
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  name: http
